force-app/main/default/objects/cogn__Cognism_Person__c/cogn__Cognism_Person__c.object-meta.xml
<CustomObject>
    <label>Cognism Person</label>
    <nameField>
        <label>Cognism Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cognism Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>