force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Ccom__c.field-meta.xml
<CustomField>
    <fullName>cogn__Ccom__c</fullName>
    <label>Ccom</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>