force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Cognism_Company__c.field-meta.xml
<CustomField>
    <fullName>cogn__Cognism_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cognism Company</label>
    <referenceTo>cogn__Cognism_Company__c</referenceTo>
    <relationshipLabel>Cognism Persons</relationshipLabel>
    <relationshipName>Cognism_Persons</relationshipName>
    <type>Lookup</type>
</CustomField>