force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Company__c.field-meta.xml
<CustomField>
    <fullName>cogn__Company__c</fullName>
    <formula>IF(ISBLANK(cogn__Contact__c),  cogn__Lead__r.Company ,  (IF( ISBLANK( cogn__Contact__r.AccountId ) , &apos;&apos;,  cogn__Contact__r.Account.Name ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>