force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Country__c.field-meta.xml
<CustomField>
    <fullName>cogn__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>