force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Email__c.field-meta.xml
<CustomField>
    <fullName>cogn__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>