force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Image__c.field-meta.xml
<CustomField>
    <fullName>cogn__Image__c</fullName>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>