force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Lead__c.field-meta.xml
<CustomField>
    <fullName>cogn__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cognism Persons</relationshipLabel>
    <relationshipName>Cognism_Persons</relationshipName>
    <type>Lookup</type>
</CustomField>