force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Linkedin__c.field-meta.xml
<CustomField>
    <fullName>cogn__Linkedin__c</fullName>
    <label>Linkedin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>