force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Phone__c.field-meta.xml
<CustomField>
    <fullName>cogn__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>