force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Skills__c.field-meta.xml
<CustomField>
    <fullName>cogn__Skills__c</fullName>
    <label>Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>