force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Title__c.field-meta.xml
<CustomField>
    <fullName>cogn__Title__c</fullName>
    <formula>IF(ISBLANK(cogn__Contact__c),  cogn__Lead__r.Title  ,  cogn__Contact__r.Title  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>