force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Type__c.field-meta.xml
<CustomField>
    <fullName>cogn__Type__c</fullName>
    <formula>IF(ISBLANK(cogn__Contact__c), &apos;Lead&apos; , &apos;Contact&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>