force-app/main/default/objects/cogn__Cognism_Person__c/fields/cogn__Xcom__c.field-meta.xml
<CustomField>
    <fullName>cogn__Xcom__c</fullName>
    <label>Xcom</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>